# vix

./: .gitignore  Cargo.toml  LICENSE.md  README.md  preferences.xiconfig
src/: client.rs  command_prompt.rs  editor.rs  main.rs  modal.rs  style.rs  tty.rs  tui.rs  view.rs  vix.rs  window.rs  xim.rs
