[package]
name = "xim"
version = "0.1.0"
authors = ["Michael E. Craggs <m.e.craggs@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "1.0"
futures = "0.1"
slog = "2.3"
slog-async = "2.3"
slog-scope = "4.0"
slog-term = "2.4"
tokio = "0.1"
termion = "1.5"
xrl = { git = "https://github.com/xi-frontend/xrl" }